--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,15 @@ jobs:
           KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
           KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
         image: confluentinc/cp-kafka:latest
+        ports:
+        - 9092:9092
+      zookeeper:
+        env:
+          ZOOKEEPER_CLIENT_PORT: "2181"
+          ZOOKEEPER_TICK_TIME: "2000"
+        image: confluentinc/cp-zookeeper:latest
+        ports:
+        - 2181:2181
     steps:
     - name: Install Go
       uses: actions/setup-go@v1
@@ -19,8 +28,17 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v1
+    - name: Wait for Kafka
+      run: "waitfor() {\n\twhile ! nc -v -z $1 $2\n\tdo sleep 1\n\tdone\n}\nwaitfor
+        localhost 9092\nwaitfor localhost 2181\n"
+      shell: bash
+      timeout-minutes: 1
     - name: Test
-      run: go test ./...
+      run: |
+        nc -v -z localhost 9092
+        export KAFKA_ADDRS=localhost:9092
+        go test ./...
+        #go test -mod=vendor ./...
     strategy:
       matrix:
         go-version:
